Fix potential buffer overflow in GTIFAngleStringToDD. http://trac.osgeo.org/gdal/ticket/2228
git-svn-id: https://svn.osgeo.org/metacrs/geotiff/trunk@762 4e78687f-474d-0410-85f9-8d5e500ac6b2

--- a/geotiff/libgeotiff/ChangeLog
+++ b/geotiff/libgeotiff/ChangeLog
@@ -1,3 +1,8 @@
+2008-07-03  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* geo_normalize.c: Fix potential buffer overflow in GTIFAngleStringToDD
+	http://trac.osgeo.org/gdal/ticket/2228
+	
 2008-05-21  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* bin/geotifcp.c: Support for -4 option to set from proj.4 def.
